# clima-smart

./: .gitignore  Dockerfile  Dockerfile.airflow  Dockerfile.mlflow  Makefile  README.md  docker-compose.yaml  k8s-deployment.yaml  k8s-service.yaml  pyproject.toml  requirements.txt
.dvc/: config
clima_smart/: __init__.py  dataset.py  features.py  plots.py
dags/: Hourly_Model_Development_dag.py  HourlymodelValidation.py  Hourlymodelbiasdetection.py  ModelHourly.py  constants.py  daily_compare_best_model.py  daily_model_analysis.py  daily_model_bias_detection.py  daily_model_development_dag.py  daily_model_sensitivity.py  daily_model_training.py  daily_model_training_v2.py  daily_model_validation.py  daily_weather_data_collection_dag.py  daily_weather_model_development_dag .py  daily_weather_model_development_dag.py  dailymodelbiasdetection.py  dailymodelsensitivity.py  dailymodeltraining.py  feature_engineering.py  hourly_bias_detection.py  hourly_model_analysis.py  hourly_model_development_dag.py  hourly_model_sensitivity.py  hourly_model_shap.py  hourly_model_training.py  hourly_model_training_v2.py  hourly_model_validation.py  hourly_weather_data_collection_dag.py  hourly_weather_model_development_dag.py  hourlybiasdetection.py  hourlymodeltraining.py  util.py  utils.py  weather_Daily_Model_Development_dag .py  weather_Hourly_Model_Development_dag.py  weather_Model_Development_dag.py  weather_data_collection.py  weather_data_collection_dag.py  weather_data_preprocessing.py  (+3 more)
data/: .gitignore  daily_weather_data.csv.dvc
docs/: mkdocs.yml
mlruns/: mlflow.db
(+26 files in other folders)
