[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "clima_smart"
version = "0.0.1"
description = "ClimaSmart aims to utilize machine learning to predict daily weather and provide users with actionable insights, such as personalized clothing recommendations based on the forecast. The goal is to create a user-friendly application that not only predicts weather with high accuracy but also enhances daily planning efficiency."
authors = [
  { name = "MLOps-group-8" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["clima_smart"]
force_sort_within_sections = true
